# udm-fan

./: Cargo.toml  README.md
.github/workflows/: audit.yml
src/: cli.rs  discovery.rs  main.rs  password.rs
