[package]
name = "udm-fan"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "A utility for interacting with the fans on a UDM-Pro over the network"
documentation = "https://docs.rs/udm-fan"
readme = "README.md"
homepage = "https://github.com/ewpratten/udm-fan"
repository = "https://github.com/ewpratten/udm-fan"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.8", features = ["derive", "color", "suggestions"] }
ssh2 = "0.9.3"
colored = "2.0.0"
rpassword = "6.0"
netrc-rs = "0.1.2"
# local-ip-address = "0.4.4"
pnet = "0.33.0"
thiserror = "1.0.30"
dns-lookup = "1.0.8"
ipnet = "2.4.0"
regex = "1.5.5"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.10"
shellexpand = "2.1.0"